[package]
name = "cfn-guard-rulegen-lambda"
description = "A placeholder package for cfn-guard-rulegen-lambda"
version = "0.0.0"
authors = ["n/a"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ikben/cfn-guard-placeholders"
documentation = "https://github.com/ikben/cfn-guard-placeholders"
repository = "https://github.com/ikben/cfn-guard-placeholders"
readme = "../README.md"


[dependencies]
